// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
  onKeyPress={[Function]}
>
  <div
    className="MuiInput-root-5 MuiInput-fullWidth-12 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      className="MuiInput-input-13"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      rows={1}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders disabled 1`] = `
<div
  className="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
  onKeyPress={[Function]}
>
  <div
    className="MuiInput-root-5 MuiInput-disabled-8 MuiInput-fullWidth-12 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      className="MuiInput-input-13 MuiInput-disabled-8"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      rows={1}
      type="text"
      value=""
    />
  </div>
</div>
`;
